tests/ui/contracts/requires-no-final-expression.stderr
error[E0308]: mismatched types
  --> $DIR/requires-no-final-expression.rs:9:1
   |
LL | #[requires(let y = 1;)]
   | ^^^^^^^^^^^^^^^^^^^^^^^ expected `bool`, found `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
